<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.1.5.RELEASE</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>eu.arrowhead</groupId>
	<artifactId>core</artifactId>
	<version>${revision}</version>
	<packaging>pom</packaging>
	<name>core-java-spring</name>
	<description>Arrowhead Core Sevices using Spring Boot</description>

	<url>https://github.com/arrowhead-f/core-java-spring</url>
	<licenses>
    	<license>
	     	<name>Apache License, Version 2.0</name>
	     	<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
	   </license>
  	</licenses>
  	
  	<modules>
	    <module>core-common</module>
	    <module>serviceregistry</module>
	    <module>authorization</module>
	    <module>orchestrator</module>
	    <module>eventhandler</module>
	    <module>gatekeeper</module>
	    <module>gateway</module>
	    <module>choreographer</module>
	    <module>qos-monitor</module>
	    <module>deb-installer</module>
  	</modules>
  	
	<properties>
		<base.version>4.1.3</base.version>
		<revision>${base.version}</revision>
		<java.version>11</java.version>
		<mvn.clean.version>3.1.0</mvn.clean.version>
		<mvn.compiler.version>3.8.1</mvn.compiler.version>
		<mvn.compile.target>11</mvn.compile.target>
		<mvn.dependency.version>3.1.1</mvn.dependency.version>
	    <mvn.jar.version>3.1.2</mvn.jar.version>
	    <mvn.resources.version>3.1.0</mvn.resources.version>
		<mariadb.jdbc.driver>2.3.0</mariadb.jdbc.driver>
		<mysql.jdbc.driver>8.0.16</mysql.jdbc.driver>
		<swagger.version>2.9.2</swagger.version>
		<disruptor.version>3.3.6</disruptor.version>
		<http.client.version>4.5.8</http.client.version>
  		<jose4j.version>0.6.5</jose4j.version>
  		<apache.commons.lang3.version>3.9</apache.commons.lang3.version>
  		<jms.api.version>2.0.1</jms.api.version>
  		<activemq.client.version>5.15.9</activemq.client.version>
  		<icmp4j.version>1.2</icmp4j.version>
  		<jna.version>5.5.0</jna.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	
	<repositories>
        <repository>
            <id>spring-repo</id>
            <name>Spring Repository</name>
			<url>https://repo.spring.io/plugins-release/</url>
        </repository>
    </repositories>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-log4j2</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-amqp</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-integration</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-quartz</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.springframework.boot</groupId>
    		<artifactId>spring-boot-configuration-processor</artifactId>
    		<optional>true</optional>
		</dependency>
		<dependency>
		    <groupId>com.lmax</groupId>
    		<artifactId>disruptor</artifactId>
    		<version>${disruptor.version}</version>
		</dependency>
		<dependency>
           <groupId>org.apache.httpcomponents</groupId>
           <artifactId>httpclient</artifactId>
           <version>${http.client.version}</version>
        </dependency>
        <dependency>
	    	<groupId>org.bitbucket.b_c</groupId>
	    	<artifactId>jose4j</artifactId>
	    	<version>${jose4j.version}</version>
	    </dependency>
	    <dependency>
    		<groupId>org.apache.commons</groupId>
    		<artifactId>commons-lang3</artifactId>
    		<version>${apache.commons.lang3.version}</version>
		</dependency>
	    <dependency>
    		<groupId>javax.jms</groupId>
    		<artifactId>javax.jms-api</artifactId>
    		<version>${jms.api.version}</version>
		</dependency>
	    <dependency>
    		<groupId>org.apache.activemq</groupId>
    		<artifactId>activemq-client</artifactId>
    		<version>${activemq.client.version}</version>
		</dependency>
	    
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger2</artifactId>
			<version>${swagger.version}</version>
		</dependency>
		<dependency>
    		<groupId>io.springfox</groupId>
    		<artifactId>springfox-swagger-ui</artifactId>
    		<version>${swagger.version}</version>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>${mysql.jdbc.driver}</version>
			<scope>runtime</scope>
		</dependency>
		
		<dependency>
        	<groupId>sheltekio.javalibs</groupId>
        	<artifactId>icmp4j</artifactId>
        	<version>${icmp4j.version}</version>
    	</dependency>
    	<dependency>
        	<groupId>net.java.dev.jna</groupId>
        	<artifactId>jna</artifactId>
        	<version>${jna.version}</version>
    	</dependency>
    	<dependency>
	        <groupId>net.java.dev.jna</groupId>
        	<artifactId>jna-platform</artifactId>
        	<version>${jna.version}</version>
    	</dependency> 
		
<!--
		<dependency>
			<groupId>org.mariadb.jdbc</groupId>
		    <artifactId>mariadb-java-client</artifactId>
		    <version>${mariadb.jdbc.driver}</version>
		</dependency>
-->
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<defaultGoal>clean install</defaultGoal>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			
	      	<plugin>
	        	<artifactId>maven-compiler-plugin</artifactId>
	        	<version>${mvn.compiler.version}</version>
	        	<configuration>
	        		<source>${mvn.compile.target}</source>
	         		<target>${mvn.compile.target}</target>
	        	</configuration>
	      	</plugin>
	
	      	<plugin>
	        	<groupId>pl.project13.maven</groupId>
	        	<artifactId>git-commit-id-plugin</artifactId>
	        	<version>2.2.6</version>
	        	<executions>
	          		<execution>
	            		<id>get-the-git-infos</id>
	            		<goals>
	              			<goal>revision</goal>
	            		</goals>
	            		<phase>initialize</phase>
	          		</execution>
	          		<execution>
	            		<id>validate-the-git-infos</id>
	            		<goals>
	              			<goal>validateRevision</goal>
	            		</goals>
	            		<phase>package</phase>
	          		</execution>
		          	<execution>
		            	<goals>
		              		<goal>revision</goal>
		            	</goals>
		            	<phase>validate</phase>
		          	</execution>
	        	</executions>
	
		        <configuration>
		          	<injectAllReactorProjects>true</injectAllReactorProjects>
		          	<dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
		          	<prefix>git</prefix>
		          	<dateFormat>dd-MM-yyyy'T'HH:mm:ssZ</dateFormat>
		          	<dateFormatTimeZone>${user.timezone}</dateFormatTimeZone>
		          	<verbose>false</verbose>
		          	<generateGitPropertiesFile>false</generateGitPropertiesFile>
		          	<skipPoms>false</skipPoms>
		          	<failOnNoGitDirectory>false</failOnNoGitDirectory>
		          	<failOnUnableToExtractRepoInfo>true</failOnUnableToExtractRepoInfo>
		          	<runOnlyOnce>false</runOnlyOnce>
		          	<excludeProperties>
		            	<excludeProperty>git.user.*</excludeProperty>
		          	</excludeProperties>
		          	<includeOnlyProperties>
		          	</includeOnlyProperties>
		          	<abbrevLength>7</abbrevLength>
		       	</configuration>
	      	</plugin>
		</plugins>
	</build>
</project>